# SecureEdgeChat

./: .gitignore  CMakeLists.txt  README.md
src/client/: client.c
src/common/: utils.c  utils.h
src/crypto/: aes_crypto.c  aes_crypto.h
src/server/: server.c
